fix stars on safari/firefox/edge

--- a/app/styles/layout/_login-register-modal.scss
+++ b/app/styles/layout/_login-register-modal.scss
@@ -261,22 +261,7 @@
   }
 }
 
-// rating star colors
-.jq-ry-normal-group {
-  opacity: .5;
-  svg {
-    fill: $nobel;
-  }
-}
-
-.jq-ry-rated-group {
-  svg {
-    fill: $buttercup;
-  }
-}
-
 // Find Friends
-
 .connect-itemTitle {
   float: left;
   position: relative;
