--- a/app/styles/pages/_library.scss
+++ b/app/styles/pages/_library.scss
@@ -376,13 +376,7 @@
   }
 }
 
-.star-full {
-  path {
-    fill: $buttercup;
-  }
-}
-
-.star-half, .star-variable {
+.star-full, .star-half, .star-variable {
   .star-rating-filled {
     stop-color: $buttercup;
   }
