--- a/app/styles/pages/_media-pages.scss
+++ b/app/styles/pages/_media-pages.scss
@@ -76,22 +76,10 @@
     position: relative;
     top: -1px;
   }
-  .star-full {
-    path {
-      fill: #16659A;
-    }
-  }
-  .star-half, .star-variable {
+
+  .star-full, .star-half, .star-variable {
     .star-rating-filled {
       stop-color: #16659A;
-    }
-    .star-rating-base {
-      stop-color: rgba(0,0,0,.2);
-    }
-  }
-  .star-empty {
-    path {
-      fill: rgba(0,0,0,.2);
     }
   }
 }
